fix(dropdown): compact menu items were cut
Whenever a compact selection dropdown has got large menu items and a shorter menu item was selected, the whole dropdown menu was shrinked to the selected item width which in turn cropped all other items when the menu was opened again

This PR make sure by default the items text is not cropped and shown in one line.
In case somebody wants to wrap item text by whitespace one could add multiline to the menu node.

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -425,6 +425,12 @@ select.ui.dropdown {
         /* Compact */
         .ui.compact.selection.dropdown {
             min-width: 0;
+            & > .menu {
+                width: auto;
+            }
+            &:not(.multiline) {
+                width: max-content;
+            }
         }
     }
 
